--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,9 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "seed:admin": "node src/scripts/createAdmin.js",
+    "backfill:users": "node src/scripts/backfillUsers.js"
   },
   "dependencies": {
     "argon2": "^0.44.0",
